[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/montserrat_eb_14.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/icons/checkbox_off.png" type="Texture" id=2]
[ext_resource path="res://menu/battle_menu/ui/select_map_option/item/item.gd" type="Script" id=3]

[node name="item" type="MarginContainer"]
margin_right = 600.0
margin_bottom = 92.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 92.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 600.0
margin_bottom = 92.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 6.0
margin_right = 600.0
margin_bottom = 86.0
size_flags_vertical = 3

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 4.0
margin_bottom = 80.0
rect_min_size = Vector2( 4, 0 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 8.0
margin_right = 88.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 100.0
margin_bottom = 80.0
rect_min_size = Vector2( 8, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 464.0
margin_bottom = 80.0
size_flags_horizontal = 3
alignment = 1

[node name="map_name" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 360.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Name "

[node name="map_size" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 360.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Size"

[node name="select" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 468.0
margin_right = 588.0
margin_bottom = 80.0
rect_min_size = Vector2( 120, 80 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 1 )
text = "Select"

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 592.0
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 8, 0 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 600.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 2 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/select" to="." method="_on_select_pressed"]
